Add some description on README.md