@@ -1,2 +1,21 @@
 # whatsapp-clone
 A WhatsApp clone built with Java 
+# WhatsApp Clone (JavaFX + MySQL)
+
+## Requirements
+- Java 17+
+- JavaFX SDK
+- MySQL Server
+
+## Database Setup
+1. Create a MySQL database named `whatsapp_clone`.
+2. Import the SQL schema .
+3. Make sure `DBConnection.java` matches your DB credentials.
+
+## JavaFX Setup
+1. Install JavaFX SDK.
+2. Configure JavaFX in your IDE.
+   - Add VM options (e.g., `--module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml`)
+3. Run `MainApp.java`.
+
+
